--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "mongoose": "^6.0.4"
   }
 }
