--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^7.32.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.4"
   }
 }
