--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "blog list back-end app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
@@ -15,6 +15,7 @@
   "author": "Vu Nguyen",
   "license": "MIT",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12"
   },
