--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.4"
