--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
