--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "blog list back-end app",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -16,7 +16,6 @@
   "author": "Vu Nguyen",
   "license": "MIT",
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "jest": "^27.1.0",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.6"
